# job-search-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: refresh-jobs.yml
config/: market_targets.madrid.json  profile.example.json  profile.nicolas.json  salary_bands.example.json
data/: aircall_jobs_enriched.json  market_jobs.json
data/examples/: contacts.json  contacts_template.csv  jobs.json
data/market/: affirm_jobs_enriched.json  affirm_jobs_raw.json  affirm_jobs_relevant.json  aircall_jobs_enriched.json  aircall_jobs_raw.json  aircall_jobs_relevant.json  cabify_jobs_enriched.json  cabify_jobs_raw.json  cabify_jobs_relevant.json  datadog_jobs_enriched.json  elastic_jobs_enriched.json  elastic_jobs_raw.json  elastic_jobs_relevant.json  remotive_remote_aggregator_jobs_enriched.json  remotive_remote_aggregator_jobs_raw.json  the_muse_madrid_aggregator_jobs_enriched.json  the_muse_madrid_aggregator_jobs_raw.json  the_muse_madrid_aggregator_jobs_relevant.json  tinybird_jobs_enriched.json  tinybird_jobs_raw.json  tinybird_jobs_relevant.json  twilio_jobs_enriched.json  twilio_jobs_raw.json  twilio_jobs_relevant.json  typeform_jobs_enriched.json  typeform_jobs_raw.json  typeform_jobs_relevant.json
data/seeds/: datadog_jobs.json
scripts/: ui.sh
src/job_hunter_agent/: __init__.py  __main__.py  cli.py  collectors.py  (+14 more)
tests/: conftest.py  test_collectors.py  test_contacts.py  test_dashboard.py  test_emails.py  test_enrichment.py  test_jobs.py  test_market.py  test_messages_and_strategy.py  test_pipeline.py
(+3 files in other folders)
