[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter-agent"
version = "0.1.0"
description = "Rank high-paying realistic jobs and referral contacts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nicolas Beard" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[project.scripts]
job-hunter-agent = "job_hunter_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

